Login Form Validation

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,4 +5,7 @@ page-home {
     button.login.disable-hover.button.button-md.button-default.button-default-md.button-full.button-full-md {
         margin-top: 10%;
     }
+    button.signup.button.button-md.button-default.button-default-md.button-full.button-full-md {
+        margin-top: 50%;
+    }
 }
