--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -2,4 +2,7 @@ page-welcome {
     h2{
         padding:15px;
     }
+    button.media.disable-hover.button.button-md.button-default.button-default-md.button-round.button-round-md {
+        margin-left: 20%;
+    }
 }
